--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
+    "node-sass": "4.14",
     "prettier": "^2.3.2",
     "prettier-eslint": "^8.2.2",
-    "prettier-eslint-cli": "^4.2.1"
+    "prettier-eslint-cli": "^4.2.1",
+    "sass-loader": "^10.1.0"
   }
 }
