--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^2.6.12",
     "firebase": "^9.1.3",
     "nuxt": "^2.2.0",
+    "nuxt-webfontloader": "^1.1.0",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
